# app/controller/transaction/transaction_view_get.go
@@ -10,9 +10,9 @@ import (
 )
 
 // GetTransactionViewCategory godoc
-// @Summary Get a Transaction by id
-// @Description Get a Transaction by id
-// @Param X-User-ID header string false "User ID"
+// @Summary Get a Transaction by category
+// @Description Get a Transaction by category
+// @Param X-User-ID header string true "User ID"
 // @Accept  application/json
 // @Produce application/json
 // @Success 200 {object} model.Transaction Transaction data
@@ -31,6 +31,39 @@ func GetTransactionViewCategory(c *fiber.Ctx) error {
 	var data model.Transaction
 	mod := db.Model(&data).
 		Where(`"transaction".category_id IN ?`, *categories).
+		Joins("User").
+		Joins("Payment").
+		Joins("Category").
+		Joins("Balance").
+		Joins("Group")
+
+	page := pg.With(mod).Request(c.Request()).Response(&[]model.Transaction{})
+
+	return lib.OK(c, page)
+}
+
+// GetTransactionViewGroup godoc
+// @Summary Get Transaction view by group user view
+// @Description Get a Transaction by group user view
+// @Param X-User-ID header string true "User ID"
+// @Accept  application/json
+// @Produce application/json
+// @Success 200 {object} model.Transaction Transaction data
+// @Failure 400 {object} lib.Response
+// @Failure 404 {object} lib.Response
+// @Failure 500 {object} lib.Response
+// @Failure default {object} lib.Response
+// @Router /transactions/view/group [get]
+// @Tags Transaction
+func GetTransactionViewGroup(c *fiber.Ctx) error {
+	db := services.DB
+	pg := services.PG
+	userID := lib.GetXUserID(c)
+	groups := login.GetGroup(userID)
+
+	var data model.Transaction
+	mod := db.Model(&data).
+		Where(`"transaction".group_id IN ?`, *groups).
 		Joins("User").
 		Joins("Payment").
 		Joins("Category").
